--- a/web/views/home.html
+++ b/web/views/home.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-init="findGuests()">
     <div class="row">
         <div class="docs-section" id="forms">
             <div style="text-align:center;">
