--- a/web/views/home.html
+++ b/web/views/home.html
@@ -12,7 +12,8 @@
                 following process:
             </p>
             <p>
-                1. Dial *120*1146# on your phone <br /> 2. Input <b>9234</b> as the applicaiton code on the first screen
+                1. Dial <strong>*120*1146#</strong on your phone <br /> 
+                2. Input <b>9234</b> as the applicaiton code on the first screen <br />
                 3. Follow the instructions on the screen
             </p>
             <div class="docs-example docs-example-forms">
